# cpp-opencv

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  README.md  cmake_install.cmake  main.cpp
sources/: Image.cpp  Image.hpp
